Fixed overflow of text on main page with awkward screen sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ header {
       display: grid;
       background-color: rgba(0, 0, 0, .7);
       width: 100%;
+      overflow: auto;
     }
 
   #restaurants-list p {
@@ -334,7 +335,7 @@ body {
     grid-area: footer;
   }
 /* ====================== Mobile Landscape  ====================== */
-@media screen and (min-width: 500px) and (max-width: 999px) and (max-height: 499px) {
+@media screen and (min-width: 500px) and (max-width: 999px) and (max-height: 600px) {
   #maincontent {
     grid-area: main;
     display: grid;
